--- a/package.xml
+++ b/package.xml
@@ -17,7 +17,7 @@
   <build_depend>libvtk-qt</build_depend>
   <build_depend>libsqlite3-dev</build_depend>
   <build_depend>zlib</build_depend>
-  <build_depend>libfreenect</build_depend>
+  <build_depend>libfreenect-dev</build_depend>
   <build_depend>libopenni-dev</build_depend>
   <build_depend>libopenni2-dev</build_depend>
   <build_depend>cv_bridge</build_depend>
